--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+.link{
+  margin-top: 400px;
+  display: inline-block;
+  border: 2px solid black;
+  border-radius: 10px;
+  padding: 30px;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bold;
+}
